Fix vertical alignment of text in .table-form-view rows

--- a/go/base/static/css/tables.less
+++ b/go/base/static/css/tables.less
@@ -3,9 +3,9 @@
     margin-top: 1em;
     overflow: hidden;
 
-    td, tr {
+    td {
         color: #2f3436;
-        vertical-align: middle;
+        vertical-align: middle !important;
     }
 
     td:first-child, th:first-child {
